# CLIP-OCSR

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
assets/: sample_molecules_stage1.csv  sample_molecules_stage2.csv  tokenizer_smiles.json
benchmark/: MarkushWithFrequencyVariation_Journal.csv  MarkushWithFrequencyVariation_Journal.xlsx  MarkushWithFrequencyVariation_Patent.csv  MarkushWithFrequencyVariation_Patent.xlsx  MarkushWithPositionVariation_Journal.csv  MarkushWithPositionVariation_Journal.xlsx  MarkushWithPositionVariation_Patent.csv  MarkushWithPositionVariation_Patent.xlsx  MarkushWithSubstituentVariation_Journal.csv  MarkushWithSubstituentVariation_Journal.xlsx  MarkushWithSubstituentVariation_Patent.csv  MarkushWithSubstituentVariation_Patent.xlsx  README.md  eval.py  eval_posvar.py  eval_subfrevar.py
clip_ocsr/: __init__.py
clip_ocsr/evaluation/: metrics.py
clip_ocsr/inference/: predict.py
clip_ocsr/models/: resnet_extractor.py  transformer.py
clip_ocsr/stage1/: config.py  dataset.py  train.py
clip_ocsr/stage2/: config.py  dataset.py  encoder.py  (+2 more)
configs/: stage1_pretrain.yaml  stage2_finetune.yaml
data/: abbrev_group.json
dataset/: download_data.md
inference/: inference.py  rv_rearrange.py
markush_parsing/: .env.example  Complete_Markush_Representation.csv  README.md  config.py  data_loader.py  evaluate.py  image_crop.py  llm_client.py  ocsr_client.py  pipeline.py  run.py  stable_parser.py
scripts/: download_pretrained.sh  generate_sample_data.py
src/: inference.py  process.py  rv_rearrange.py
tests/: test_inference.py  test_model_build.py
weights/: download_link.md
(+4 files in other folders)
