[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clip-ocsr"
version = "1.0.0"
description = "Bridging the Markush Gap in Optical Chemical Structure Recognition via a CLIP-Derived Visual Backbone and Synthetic Data Generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Qixing Huang"},
]
keywords = ["OCSR", "chemical-structure-recognition", "CLIP", "SMILES", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "Pillow>=9.0.0",
    "tqdm>=4.60.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=5.4.0",
    "tokenizers>=0.12.0",
    "rdkit>=2022.03.0",
    "tensorboard>=2.10.0",
]

[project.optional-dependencies]
markush = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "mineru-open-sdk>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/SuninKingdom/CLIP-OCSR"
Repository = "https://github.com/SuninKingdom/CLIP-OCSR"
Issues = "https://github.com/SuninKingdom/CLIP-OCSR/issues"

[tool.setuptools.packages.find]
include = ["clip_ocsr*"]
